comments/lista01e_20241028013502.txt
tester.py:56: DeprecationWarning: datetime.datetime.utcnow() is deprecated and scheduled for removal in a future version. Use timezone-aware objects to represent datetimes in UTC: datetime.datetime.now(datetime.UTC).
g++ (Debian 12.2.0-14) 12.2.0
Copyright (C) 2022 Free Software Foundation, Inc.
This is free software; see the source for copying conditions.  There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
ex4.cpp: In function ‘int main()’:
ex4.cpp:31:18: error: ‘fib’ was not declared in this scope
   31 |     printf("%d", fib(n, m));
      |                  ^~~
Versão do G++:
Varificando data de envio...
PRAZO MÁXIMO: 2024-09-28T03:00:00-03:00
Testando sua solucao...
Procurando exercício 1...
Exercício 1...
Compilando...
g++ -O2 -Wno-unused-result  "ex1.cpp" 
Teste 1: correto!
Teste 2: correto!
Teste 3: correto!
Teste 4: correto!
Teste 5: correto!
Teste 6: correto!
Teste 7: correto!
Teste 8: correto!
Teste 9: correto!
Teste 10: correto!
Teste 11: correto!
Teste 12: correto!
Teste 13: correto!
Teste 14: correto!
Teste 15: correto!
Teste 16: correto!
Teste 17: correto!
Teste 18: correto!
Teste 19: correto!
Teste 20: correto!
Nota exercicio 1: 1.0
Procurando exercício 2...
Exercício 2...
Compilando...
g++ -O2 -Wno-unused-result  "ex2.cpp" 
Teste 1: correto!
Teste 2: correto!
Teste 3: correto!
Teste 4: correto!
Teste 5: correto!
Teste 6: correto!
Teste 7: correto!
Teste 8: correto!
Teste 9: correto!
Teste 10: correto!
Teste 11: correto!
Teste 12: correto!
Teste 13: correto!
Teste 14: correto!
Teste 15: correto!
Teste 16: correto!
Teste 17: correto!
Teste 18: correto!
Teste 19: correto!
Teste 20: correto!
Nota exercicio 2: 1.0
Procurando exercício 3...
Exercício 3...
Compilando...
g++ -O2 -Wno-unused-result  "ex3.cpp" 
Teste 1: correto!
Teste 2: correto!
Teste 3: correto!
Teste 4: correto!
Teste 5: correto!
Teste 6: correto!
Teste 7: correto!
Teste 8: correto!
Teste 9: correto!
Teste 10: correto!
Teste 11: correto!
Teste 12: correto!
Teste 13: correto!
Teste 14: correto!
Teste 15: correto!
Teste 16: correto!
Teste 17: correto!
Teste 18: correto!
Teste 19: correto!
Teste 20: correto!
Nota exercicio 3: 1.0
Procurando exercício 4...
Exercício 4...
Compilando...
g++ -O2 -Wno-unused-result  "ex4.cpp" 
Teste 1 deu errado!
('99857 5894\n',)
Erro de compilação
Teste 2 deu errado!
('90290 2545\n',)
Erro de compilação
Teste 3 deu errado!
('90219 1113\n',)
Erro de compilação
Teste 4 deu errado!
('91979 7368\n',)
Erro de compilação
Teste 5 deu errado!
('96629 2586\n',)
Erro de compilação
Teste 6 deu errado!
('90122 6063\n',)
Erro de compilação
Teste 7 deu errado!
('6 10\n',)
Erro de compilação
Teste 8 deu errado!
('90679 6545\n',)
Erro de compilação
Teste 9 deu errado!
('90804 9623\n',)
Erro de compilação
Teste 10 deu errado!
('96934 3229\n',)
Erro de compilação
Teste 11 deu errado!
('93778 6661\n',)
Erro de compilação
Teste 12 deu errado!
('98627 3450\n',)
Erro de compilação
Teste 13 deu errado!
('99289 6417\n',)
Erro de compilação
Teste 14 deu errado!
('90104 7223\n',)
Erro de compilação
Teste 15 deu errado!
('90879 8885\n',)
Erro de compilação
Teste 16 deu errado!
('92780 2645\n',)
Erro de compilação
Teste 17 deu errado!
('92373 1011\n',)
Erro de compilação
Teste 18 deu errado!
('93432 8535\n',)
Erro de compilação
Teste 19 deu errado!
('96194 1663\n',)
Erro de compilação
Teste 20 deu errado!
('10 100\n',)
Erro de compilação
Nota exercicio 4: 0.0
Procurando exercício 5...
Procurando exercício 6...
Procurando exercício 7...
Nota total: 3.00
{"scores": {"ex1": 1.0, "ex2": 1.0, "ex3": 1.0, "ex4": 0.0, "ex5": 0, "ex6": 0, "ex7": 0}}
